[gd_scene load_steps=18 format=3 uid="uid://bmuf5if146042"]

[ext_resource type="Script" path="res://Script/root.gd" id="1_jlpp1"]
[ext_resource type="Script" path="res://Script/import.gd" id="2_6h4p4"]
[ext_resource type="Script" path="res://Script/del_class.gd" id="3_foj56"]
[ext_resource type="PackedScene" uid="uid://i1svdoinhdnq" path="res://Scene/class_list.tscn" id="3_i5oo7"]
[ext_resource type="Script" path="res://Script/export.gd" id="3_svhcx"]
[ext_resource type="Script" path="res://Script/new_test.gd" id="3_xj1u8"]
[ext_resource type="PackedScene" uid="uid://7vwxihvk32k" path="res://Scene/test_list.tscn" id="4_2ru4n"]
[ext_resource type="PackedScene" uid="uid://dx1tlfkw28k7w" path="res://Scene/my_window.tscn" id="4_jd50d"]
[ext_resource type="Script" path="res://Script/new_class.gd" id="4_p78wo"]
[ext_resource type="Script" path="res://Script/export_format.gd" id="5_kdv23"]
[ext_resource type="Script" path="res://Script/subject_option.gd" id="5_n5ajx"]
[ext_resource type="ButtonGroup" uid="uid://3id7vjen3q13" path="res://Resource/ButtonGroup/ApiProvider.tres" id="6_cu7ei"]
[ext_resource type="Script" path="res://Script/api_provider.gd" id="8_hhkq0"]
[ext_resource type="Script" path="res://Script/student_grid.gd" id="12_f2dek"]
[ext_resource type="PackedScene" uid="uid://hsawtbwc05qp" path="res://Scene/geo_bio_point_scale.tscn" id="13_or1a6"]
[ext_resource type="PackedScene" uid="uid://lkn7f5uarq0v" path="res://Scene/item_list.tscn" id="16_jvq8g"]
[ext_resource type="PackedScene" uid="uid://cw0mrb68fyw05" path="res://Scene/select_file_or_dir.tscn" id="17_ks8du"]

[node name="Root" type="TabContainer"]
offset_right = 1924.0
offset_bottom = 1086.0
tab_alignment = 1
script = ExtResource("1_jlpp1")

[node name="Import" type="Control" parent="."]
layout_mode = 2
script = ExtResource("2_6h4p4")

[node name="ClassIndication" type="Label" parent="Import"]
layout_mode = 0
offset_left = 95.0
offset_top = 49.0
offset_right = 298.0
offset_bottom = 151.0
text = "↓班级"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClassList" parent="Import" instance=ExtResource("3_i5oo7")]
layout_mode = 0
offset_left = 55.0
offset_top = 158.0
offset_right = 493.0
offset_bottom = 932.0
button_type = 1

[node name="TestIndication" type="Label" parent="Import"]
layout_mode = 0
offset_left = 823.0
offset_top = 39.0
offset_right = 1088.0
offset_bottom = 153.0
text = "↓考试"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TestList" parent="Import" instance=ExtResource("4_2ru4n")]
layout_mode = 2
offset_left = 693.0
offset_top = 186.0
offset_right = 1268.0
offset_bottom = 929.0

[node name="NewClass" type="Button" parent="Import"]
layout_mode = 0
offset_left = 1377.0
offset_top = 130.0
offset_right = 1784.0
offset_bottom = 206.0
text = "添加班级"
script = ExtResource("4_p78wo")

[node name="MyWindow" parent="Import/NewClass" instance=ExtResource("4_jd50d")]
layout_mode = 0
offset_left = 407.0
offset_top = 205.0
offset_right = 1388.0
offset_bottom = 851.0
confirm_text = "创建新的班级~"
cancel_text = "不, 还没准备好"

[node name="ClassListIndication" type="Label" parent="Import/NewClass/MyWindow"]
layout_mode = 0
offset_left = 43.0
offset_top = 53.0
offset_right = 261.0
offset_bottom = 109.0
text = "下面的这些班级已经存在了"

[node name="ClassList" parent="Import/NewClass/MyWindow" instance=ExtResource("3_i5oo7")]
layout_mode = 0
offset_left = 32.0
offset_top = 95.0
offset_right = 302.0
offset_bottom = 502.0

[node name="MyClassName" type="LineEdit" parent="Import/NewClass/MyWindow"]
layout_mode = 0
offset_left = 331.0
offset_top = 39.0
offset_right = 931.0
offset_bottom = 110.0
placeholder_text = "在此处键入想要添加的班级名字😊留空则默认为数据文件的文件名"

[node name="DataFileIndication" type="Label" parent="Import/NewClass/MyWindow"]
layout_mode = 0
offset_left = 335.0
offset_top = 130.0
offset_right = 778.0
offset_bottom = 208.0
text = "数据文件的要求:
是 xlsx 文件, A 列从第二行开始, 每个格子包含一个学生的姓名.
不必排序, 但是必须包含所有学生的姓名"

[node name="DataFilePath" parent="Import/NewClass/MyWindow" node_paths=PackedStringArray("file_dialog") instance=ExtResource("17_ks8du")]
layout_mode = 0
offset_left = 333.0
offset_top = 241.0
offset_right = 928.0
offset_bottom = 318.0
placeholder_text = "在此处键入文件路径, 或者点击下面按钮进行选择"
file_dialog = NodePath("../../../FileDialog")

[node name="NewTest" type="Button" parent="Import"]
layout_mode = 0
offset_left = 1406.0
offset_top = 807.0
offset_right = 1813.0
offset_bottom = 883.0
text = "添加考试"
script = ExtResource("3_xj1u8")

[node name="MyWindow" parent="Import/NewTest" instance=ExtResource("4_jd50d")]
layout_mode = 0
offset_left = 407.0
offset_top = 155.0
offset_right = 1691.0
offset_bottom = 903.0
confirm_text = "新的考试, 新的成绩"
cancel_text = "这次算了"

[node name="ClassIndication" type="Label" parent="Import/NewTest/MyWindow"]
layout_mode = 0
offset_left = 57.0
offset_top = 55.0
offset_right = 249.0
offset_bottom = 80.0
text = "选一下在哪个班级添加新的考试"

[node name="ClassList" parent="Import/NewTest/MyWindow" instance=ExtResource("3_i5oo7")]
layout_mode = 0
offset_left = 36.0
offset_top = 100.0
offset_right = 312.0
offset_bottom = 562.0
button_type = 1

[node name="TestIndication" type="Label" parent="Import/NewTest/MyWindow"]
layout_mode = 0
offset_left = 399.0
offset_top = 63.0
offset_right = 586.0
offset_bottom = 121.0
text = "已经考了这么多试了吗"

[node name="TestList" parent="Import/NewTest/MyWindow" instance=ExtResource("4_2ru4n")]
layout_mode = 0
offset_left = 357.0
offset_top = 116.0
offset_right = 628.0
offset_bottom = 605.0

[node name="TestName" type="LineEdit" parent="Import/NewTest/MyWindow"]
layout_mode = 0
offset_left = 685.0
offset_top = 38.0
offset_right = 1098.0
offset_bottom = 114.0
placeholder_text = "在此处输入新的考试名称~留空则默认为文件名字"

[node name="DataFilePath" parent="Import/NewTest/MyWindow" node_paths=PackedStringArray("file_dialog") instance=ExtResource("17_ks8du")]
layout_mode = 0
offset_left = 687.0
offset_top = 170.0
offset_right = 1262.0
offset_bottom = 247.0
placeholder_text = "在此处键入新的考试数据文件的路径, 或者也可以按下面按钮手动选择"
file_dialog = NodePath("../../../FileDialog")

[node name="GeoBioPointScale" parent="Import/NewTest/MyWindow" instance=ExtResource("13_or1a6")]
layout_mode = 0
offset_left = 711.0
offset_top = 378.0
offset_right = 884.0
offset_bottom = 404.0

[node name="DelClass" type="Button" parent="Import"]
layout_mode = 0
offset_left = 1384.0
offset_top = 341.0
offset_right = 1791.0
offset_bottom = 417.0
text = "删除班级"
script = ExtResource("3_foj56")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Import/DelClass"]
initial_position = 1
ok_button_text = "删除所有数据"
dialog_text = "此功能尚未完成, 不过有一个暂时替代的方法, 即可以选择删除所有数据. 是否删除所有数据?"
cancel_button_text = "还是算了"

[node name="DelTest" type="Button" parent="Import"]
layout_mode = 0
offset_left = 1393.0
offset_top = 581.0
offset_right = 1800.0
offset_bottom = 657.0
text = "删除考试"

[node name="FileDialog" type="FileDialog" parent="Import"]
title = "Open a File"
position = Vector2i(650, 200)
size = Vector2i(600, 800)
ok_button_text = "打开"
dialog_autowrap = true
cancel_button_text = "还不确定, 再看看"
file_mode = 0
access = 2
filters = PackedStringArray("*.xlsx")

[node name="Export" type="Control" parent="."]
visible = false
layout_mode = 2
script = ExtResource("3_svhcx")

[node name="ClassIndication" type="Label" parent="Export"]
layout_mode = 0
offset_left = 61.0
offset_top = 63.0
offset_right = 157.0
offset_bottom = 88.0
text = "选择一个班级"

[node name="ClassList" parent="Export" instance=ExtResource("3_i5oo7")]
layout_mode = 0
offset_left = 16.0
offset_top = 93.0
offset_right = 239.0
offset_bottom = 540.0
button_type = 1

[node name="TestIndication" type="Label" parent="Export"]
layout_mode = 0
offset_left = 354.0
offset_top = 66.0
offset_right = 450.0
offset_bottom = 91.0
text = "选择一场考试"

[node name="TestList" parent="Export" instance=ExtResource("4_2ru4n")]
layout_mode = 0
offset_left = 278.0
offset_top = 102.0
offset_right = 570.0
offset_bottom = 528.0
in_a_same_button_group = false
button_type = 1

[node name="SubIndication" type="Label" parent="Export"]
layout_mode = 2
offset_left = 691.0
offset_top = 70.0
offset_right = 763.0
offset_bottom = 95.0
text = "↓学科选项
"

[node name="SubjectOption" type="GridContainer" parent="Export/SubIndication"]
layout_mode = 0
offset_left = -84.0
offset_top = 40.0
offset_right = 202.0
offset_bottom = 209.0
script = ExtResource("5_n5ajx")

[node name="ExportInfoPreview" type="Label" parent="Export"]
layout_mode = 0
offset_left = 42.0
offset_top = 542.0
offset_right = 640.0
offset_bottom = 624.0

[node name="Preview" type="Button" parent="Export/ExportInfoPreview"]
layout_mode = 0
offset_left = 20.0
offset_top = 83.0
offset_right = 93.0
offset_bottom = 128.0
text = "看看会导出哪些数据"

[node name="ExportPath" parent="Export" node_paths=PackedStringArray("file_dialog") instance=ExtResource("17_ks8du")]
layout_mode = 0
offset_left = 45.0
offset_top = 709.0
offset_right = 436.0
offset_bottom = 786.0
placeholder_text = "在此处键入输出路径, 或者点击下方按钮手动选择"
file_dialog = NodePath("FileDialog")

[node name="FileDialog" type="FileDialog" parent="Export/ExportPath"]
title = "Open a Directory"
position = Vector2i(650, 200)
size = Vector2i(600, 800)
ok_button_text = "选择当前文件夹"
cancel_button_text = "取消"
file_mode = 2
access = 2

[node name="Export" type="Button" parent="Export"]
layout_mode = 0
offset_left = 528.0
offset_top = 709.0
offset_right = 714.0
offset_bottom = 817.0
text = "导出"

[node name="GeoBioPointScale" parent="Export" instance=ExtResource("13_or1a6")]
layout_mode = 0
offset_left = 68.0
offset_top = 889.0
offset_right = 241.0
offset_bottom = 915.0
text = "地理, 生物最高分映射为:"

[node name="ApiProvider" type="Label" parent="Export"]
layout_mode = 2
offset_left = 303.0
offset_top = 895.0
offset_right = 472.0
offset_bottom = 921.0
text = "导出 pdf 时,API 提供自:"
script = ExtResource("8_hhkq0")

[node name="ApiOption" type="VBoxContainer" parent="Export/ApiProvider"]
layout_mode = 0
offset_left = 6.0
offset_top = 34.0
offset_right = 158.0
offset_bottom = 113.0

[node name="MicrosoftOffice" type="CheckBox" parent="Export/ApiProvider/ApiOption"]
layout_mode = 2
button_group = ExtResource("6_cu7ei")
text = "Microsoft Office"

[node name="WPSOffice" type="CheckBox" parent="Export/ApiProvider/ApiOption"]
layout_mode = 2
button_pressed = true
button_group = ExtResource("6_cu7ei")
text = "WPS Office"

[node name="ExportFormat" type="VBoxContainer" parent="Export"]
layout_mode = 0
offset_left = 570.0
offset_top = 899.0
offset_right = 710.0
offset_bottom = 990.0
script = ExtResource("5_kdv23")

[node name="ExportToPdf" type="CheckBox" parent="Export/ExportFormat"]
layout_mode = 2
text = "导出为 pdf"

[node name="ExportToXlsx" type="CheckBox" parent="Export/ExportFormat"]
layout_mode = 2
button_pressed = true
text = "导出为 xlsx"

[node name="StudentIndication" type="Label" parent="Export"]
layout_mode = 0
offset_left = 1240.0
offset_top = 124.0
offset_right = 1501.0
offset_bottom = 204.0
text = "在下方选择一个幸运学生"

[node name="StudentGrid" parent="Export" instance=ExtResource("16_jvq8g")]
offset_left = 919.0
offset_top = 181.0
offset_right = 1831.0
offset_bottom = 996.0
script = ExtResource("12_f2dek")
button_type = 1
container_type = 2

[node name="Help" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Help"]
layout_mode = 0
offset_left = 324.0
offset_top = 209.0
offset_right = 1078.0
offset_bottom = 704.0
text = "所有的名称, 班级名称, 学生姓名, 考试名称, 都不允许包含英文的单引号和英文的双引号"

[connection signal="updated" from="Import" to="." method="updated"]
[connection signal="class_selected" from="Import/ClassList" to="Import" method="_on_class_list_class_selected"]
[connection signal="pressed" from="Import/NewClass" to="Import/NewClass" method="_on_pressed"]
[connection signal="confirmed" from="Import/NewClass/MyWindow" to="Import/NewClass" method="_on_my_window_confirmed"]
[connection signal="pressed" from="Import/NewTest" to="Import/NewTest" method="_on_pressed"]
[connection signal="confirmed" from="Import/NewTest/MyWindow" to="Import/NewTest" method="_on_my_window_confirmed"]
[connection signal="class_selected" from="Import/NewTest/MyWindow/ClassList" to="Import/NewTest" method="_on_class_list_class_selected"]
[connection signal="pressed" from="Import/DelClass" to="Import/DelClass" method="_on_pressed"]
[connection signal="confirmed" from="Import/DelClass/ConfirmationDialog" to="Import/DelClass" method="_on_confirmation_dialog_confirmed"]
[connection signal="pressed" from="Import/DelTest" to="Import/DelClass" method="_on_pressed"]
[connection signal="class_selected" from="Export/ClassList" to="Export" method="_on_class_list_class_selected"]
[connection signal="pressed" from="Export/ExportInfoPreview/Preview" to="Export" method="_on_preview_pressed"]
[connection signal="pressed" from="Export/Export" to="Export" method="_on_export_pressed"]
